--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -3,6 +3,7 @@
 @import "~bourbon-neat/app/assets/stylesheets/neat";
 
 // config
+@import "config/colors";
 @import "config/variables";
 
 // Material Deign Lite
