--- a/assets/styles/parts/_pagination.scss
+++ b/assets/styles/parts/_pagination.scss
@@ -20,7 +20,7 @@
   a {
     transition: background .3s $animation-curve-default;
     &:hover {
-      background: unquote("rgb(#{$palette-grey-300})");
+      background: $grey-300;
     }
   }
 
@@ -30,7 +30,7 @@
     margin: 0 ($spacer / 4);
     padding: .75rem;
     border-radius: 2px;
-    color: unquote("rgb(#{$palette-grey-600})");
+    color: $grey-600;
     &:hover,
     &:focus {
       outline: 0;
@@ -50,7 +50,7 @@
 .pagination-active span {
   font-weight: bold;
   cursor: default;
-  background: unquote("rgb(#{$palette-grey-600})");
+  background: $grey-600;
   color: #fff;
 }
 
@@ -60,11 +60,11 @@
   a {
     border-radius: ($spacer * .125);
     padding: .5rem;
-    color: unquote("rgb(#{$palette-grey-600})");
+    color: $grey-600;
     transition: background .3s $animation-curve-default;
 
     &:hover {
-      background: unquote("rgb(#{$palette-grey-300})");
+      background: $grey-300;
     }
     &:focus {
       outline: 0;
@@ -103,12 +103,12 @@
 .pager-icon {
   width: 2rem;
   text-align: center;
-  color: unquote("rgb(#{$palette-grey-800})");
+  color: $grey-800;
 }
 .pager-instruct {
   text-transform: uppercase;
   font-weight: bold;
-  color: unquote("rgb(#{$palette-grey-500})");
+  color: $grey-500;
 }
 .pager-title {
   @include ellipsis(100%);
