--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -5,7 +5,7 @@ $entry-thumbnail-size: 5rem;//80px;
   padding: 1rem;
   font-size: $font-size-h4;
   font-weight: normal;
-  border-bottom: 1px solid unquote("rgb(#{$palette-grey-300})");
+  border-bottom: 1px solid $grey-300;
 }
 
 .entry-home-container {
@@ -19,12 +19,12 @@ $entry-thumbnail-size: 5rem;//80px;
 // Image
 .entry-home {
   transition: background .3s $animation-curve-default;
-  border-bottom: 1px solid unquote("rgb(#{$palette-grey-200})");
+  border-bottom: 1px solid $grey-200;
   user-select: none;
 
   &:hover {
     cursor: pointer;
-    background: unquote("rgb(#{$palette-grey-100})");
+    background: $grey-100;
     .entry-home-image-sheet {
       transform: scale(1.15);
     }
@@ -58,13 +58,13 @@ $entry-thumbnail-size: 5rem;//80px;
   @include size($entry-thumbnail-size);
   border-radius: ($spacer * .125);
   overflow: hidden;
-  border: 1px solid unquote("rgb(#{$palette-grey-200})");
+  border: 1px solid $grey-200;
 
   &.none {
     .material-icons {
       font-size: 2rem;
       @include size(2rem);
-      color: unquote("rgb(#{$palette-grey-400})");
+      color: $grey-400;
     }
   }
 
@@ -75,7 +75,7 @@ $entry-thumbnail-size: 5rem;//80px;
   line-height: $entry-thumbnail-size;
   @include size($entry-thumbnail-size);
   max-height: $entry-thumbnail-size;
-  background: unquote("rgb(#{$palette-grey-50})") 50% no-repeat;
+  background: $grey-50 50% no-repeat;
   background-size: cover;
   transition: transform .2s cubic-bezier(.08, .82, .17, 1);
 }
@@ -92,7 +92,7 @@ $entry-thumbnail-size: 5rem;//80px;
   word-wrap: break-word;
 }
 .entry-home-summary {
-  color: unquote("rgb(#{$palette-grey-600})");
+  color: $grey-600;
   font-size: $font-size-sm;
   text-align: justify;
 }
