--- a/assets/styles/parts/_entry-share.scss
+++ b/assets/styles/parts/_entry-share.scss
@@ -2,7 +2,7 @@ $twitter-color:     #55acee;
 $facebook-color:    #3b5998;
 $hatena-color:      #2c6ebd;
 $line-color:        #00c300;
-$share-base-color:  unquote("rgb(#{$palette-grey-300})");
+$share-base-color:  $grey-300;
 
 .entry-share {
   list-style: none;
