--- a/assets/styles/parts/_entry-similar.scss
+++ b/assets/styles/parts/_entry-similar.scss
@@ -1,5 +1,5 @@
 .entry-similar {
-  border-top: 1px solid unquote("rgb(#{$palette-grey-300})");
+  border-top: 1px solid $grey-300;
   padding-top: 1.5rem;
   a {
     display: block;
@@ -17,12 +17,12 @@
 }
 
 .similar-title {
-  color: unquote("rgb(#{$palette-grey-800})");
+  color: $grey-800;
   font-weight: bold;
   line-height: 2;
 }
 
 .similar-description {
-  color: unquote("rgb(#{$palette-grey-500})");
+  color: $grey-500;
   font-size: $font-size-sm;
 }
