--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -19,6 +19,7 @@
 @import "base/global";
 @import "base/type";
 @import "base/grid";
+@import "base/helper";
 
 // pages
 @import "pages/home";
@@ -29,6 +30,7 @@
 @import "parts/wp-classes";
 @import "parts/pagination";
 @import "parts/breadcrumb";
+@import "parts/drawer";
 @import "parts/mokuji";
 @import "parts/loader";
 @import "parts/sandbox";
