--- a/assets/styles/parts/_drawer.scss
+++ b/assets/styles/parts/_drawer.scss
@@ -6,6 +6,22 @@
   }
 }
 
+.open-drawer {
+  @extend .no-scroll;
+
+  .off-canvas {
+    overflow-y: auto;
+    overflow-x: hidden;
+    opacity: 1;
+    transform: translate(0, 0) translate3d(0, 0, 0);
+  }
+
+  .off-canvas-overlay {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
 .off-canvas-checkbox {
   position: absolute;
   top: 0;
@@ -13,28 +29,6 @@
   height: 0;
   width: 0;
   opacity: 0;
-
-  &:checked ~ .off-canvas {
-    overflow-y: auto;
-    overflow-x: hidden;
-    opacity: 1;
-    transform: translate(0, 0) translate3d(0, 0, 0);
-  }
-
-  &:checked ~ .off-canvas-overlay {
-    opacity: 1;
-    visibility: visible;
-  }
-
-  &:focus ~ .off-canvas,
-  &:active ~ .off-canvas {
-    transition: transform .2s ease, opacity .2s ease;
-  }
-
-  &:focus ~ .off-canvas-overlay,
-  &:active ~ .off-canvas-overlay {
-    transition: opacity .2s ease, visibility .2s ease;
-  }
 }
 
 .off-canvas-overlay {
