--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,6 +1,6 @@
 .header-navigation {
   margin-bottom: 1rem;
-  padding: 1rem;
+  padding: .5rem;
   background: $white;
   box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .15);
 }
