--- a/assets/styles/layouts/_sidebar.scss
+++ b/assets/styles/layouts/_sidebar.scss
@@ -4,14 +4,23 @@
     list-style: none;
     margin-top: 0;
     padding: 0;
+  }
 
-    a {
-      transition: background .3s $animation-curve-fast-out-slow-in;
+  a {
+    display: block;
+    padding: 1rem 1.5rem;
+    color: $grey-600;
+    font-size: $font-size-sm;
+    transition: background .3s $animation-curve-fast-out-slow-in;
+    &:hover {
+      background: $grey-300;
     }
   }
 }
+
 .widget-title {
-  margin-bottom: 0;
+  padding: 0 0 0 .75rem;
+  margin-bottom: .5rem;
 }
 
 .widget_categories {
