--- a/assets/styles/config/_variables.scss
+++ b/assets/styles/config/_variables.scss
@@ -44,6 +44,7 @@ $performance_font:        inherit;
 $font-size-base:          $base-size;
 $font-size-lg:            modular-scale(1);
 $font-size-sm:            modular-scale(-1);
+$font-size-xs:            modular-scale(-2);
 
 $font-size-h1:            modular-scale(4);
 $font-size-h2:            modular-scale(3);
