--- a/assets/styles/parts/_entry-meta.scss
+++ b/assets/styles/parts/_entry-meta.scss
@@ -8,10 +8,12 @@
       text-decoration: underline;
     }
   }
+
   ul {
     list-style: none;
     padding-left: 0;
   }
+
   li {
     display: inline-block;
     margin-bottom: 0;
@@ -30,7 +32,7 @@
 }
 
 .entry-tag {
-  font-size: $font-size-sm;
+  font-size: $font-size-xs;
   list-style: none;
   line-height: 2rem;
   padding-left: 0;
@@ -42,6 +44,7 @@
     margin-right: .5rem;
     margin-bottom: .5rem;
   }
+
   a {
     padding: .5rem .7rem;
     border-radius: ($spacer * .125);
@@ -52,4 +55,5 @@
       background: $grey-200;
     }
   }
+
 }
