--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -48,3 +48,4 @@
 @import "vendor/prism-line-numbers";
 @import "vendor/prism-command-line";
 @import "vendor/image-zoom";
+@import "vendor/headroomjs";
