fix: 検索ボックスのレイアウト

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -37,6 +37,7 @@
 @import "parts/entry-meta";
 @import "parts/entry-share";
 @import "parts/entry-similar";
+@import "parts/search";
 
 // layouts
 @import "layouts/header";
