add: フッターを下部に固定

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -42,6 +42,7 @@
 // layouts
 @import "layouts/header";
 @import "layouts/sidebar";
+@import "layouts/main";
 @import "layouts/footer";
 
 // vendor
