--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -29,26 +29,26 @@
   @include user-select(none);
   @include size(1rem);
 
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
   display: inline-block;
+  color: inherit;
+  font-family: 'Material Icons';
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: normal;
+  line-height: 1;
+
+  // Support for Safari and Chrome
+  text-rendering: optimizeLegibility;
+
+  text-transform: none;
+  white-space: nowrap;
+  vertical-align: middle;
+  direction: ltr;
   word-wrap: normal;
   font-feature-settings: 'liga';
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
-
-  font-size: 1rem;
-  color: inherit;
-  white-space: nowrap;
-  direction: ltr;
-  vertical-align: middle;
-
-  // Support for Safari and Chrome
-  text-rendering: optimizeLegibility;
 
   // Support for Firefox
   -moz-osx-font-smoothing: grayscale;
@@ -69,9 +69,9 @@
 
   // Rules for using icons as black on a light background.
   .md-dark {
-    color: rgba(0, 0, 0, 0.54);
+    color: rgba(0, 0, 0, .54);
     .md-inactive {
-      color: rgba(0, 0, 0, 0.26);
+      color: rgba(0, 0, 0, .26);
     }
   }
 
@@ -79,7 +79,7 @@
   .md-light {
     color: rgba(255, 255, 255, 1);
     .md-inactive {
-      color: rgba(255, 255, 255, 0.3);
+      color: rgba(255, 255, 255, .3);
     }
   }
 }
