--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,4 +1,5 @@
 // Bourbon
+$output-bourbon-deprecation-warnings: false;
 @import "~bourbon/app/assets/stylesheets/bourbon";
 @import "~bourbon-neat/app/assets/stylesheets/neat";
 
