--- a/assets/styles/parts/_entry-similar.scss
+++ b/assets/styles/parts/_entry-similar.scss
@@ -16,6 +16,13 @@
 }
 
 .smilar-container {
+  overflow: hidden;
+
+  @media screen and (max-width: $screen-sm) {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
   &:first-child {
     padding-left: 0;
   }
@@ -24,14 +31,11 @@
   }
 }
 
-.similar-title,
-.similar-description {
-  display: block;
-}
-
 .similar-title {
+  margin-bottom: .5rem;
   color: $grey-800;
   font-weight: bold;
+  @include ellipsis(100%);
 }
 
 .similar-description {
