--- a/assets/styles/pages/_single.scss
+++ b/assets/styles/pages/_single.scss
@@ -1,4 +1,5 @@
 .entry {
+  margin-bottom: 1rem;
   padding: 1rem 1.5rem;
   border: 1px solid rgba(0, 0, 0, .09);
   border-radius: ($spacer * .125);
@@ -8,6 +9,12 @@
 
   > header {
     margin-bottom: 1rem;
+  }
+
+  > footer {
+    *:last-child {
+      margin-bottom: 0;
+    }
   }
 
   h1 {
