--- a/assets/styles/parts/_entry-similar.scss
+++ b/assets/styles/parts/_entry-similar.scss
@@ -1,5 +1,5 @@
 .entry-similar {
-  margin: 1rem 0;
+  margin-bottom: 1rem;
 
   a {
     display: block;
@@ -17,18 +17,6 @@
 
 .smilar-container {
   overflow: hidden;
-
-  @media screen and (max-width: $screen-sm) {
-    padding-right: 0;
-    padding-left: 0;
-  }
-
-  &:first-child {
-    padding-left: 0;
-  }
-  &:last-child {
-    padding-right: 0;
-  }
 }
 
 .similar-title {
