--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -1,14 +1,14 @@
 $entry-thumbnail-size: 5rem;//80px;
 
 .page-header {
-  margin: 0;
+  margin: 0 0 0 1rem;
   padding: 1rem 0;
   font-size: $font-size-h3;
   font-weight: normal;
 }
 
 .entry-home {
-  margin-bottom: 1rem;
+  margin: 0 1rem 1rem;
   border: 1px solid rgba(0, 0, 0, .09);
   border-radius: ($spacer * .125);
   background: $white;
