fix: 全体のレイアウト

--- a/assets/styles/layouts/_main.scss
+++ b/assets/styles/layouts/_main.scss
@@ -3,5 +3,10 @@
 .main-container {
   $bulma-nav-height: 3.5rem;
   min-height: calc(100vh - #{$bulma-nav-height});  // for footer
+  margin: 0 1rem;
   padding-top: $bulma-nav-height + 1.5rem;  // for header
+
+  @include mobile {
+    margin: 0;
+  }
 }
