--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -1,14 +1,17 @@
 $entry-thumbnail-size: 5rem;//80px;
 
 .page-header {
-  margin: 0 0 0 1rem;
-  padding: 1rem 0;
+  margin: 0;
+  padding: .5rem 0 1rem;
   font-size: $font-size-h3;
   font-weight: normal;
+
+  @include mobile {
+    margin-left: 1rem;
+  }
 }
 
 .entry-home {
-  margin: 0 1rem 1rem;
   border: 1px solid rgba(0, 0, 0, .09);
   border-radius: ($spacer * .125);
   background: $white;
