fix: 変数の置き換え

--- a/assets/styles/pages/_single.scss
+++ b/assets/styles/pages/_single.scss
@@ -3,7 +3,7 @@
   padding: 1rem 1.5rem;
   border: 1px solid rgba(0, 0, 0, .09);
   border-radius: ($spacer * .125);
-  background: #fff;
+  background: $white;
   color: $grey-700;
   box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
 
