--- a/assets/styles/parts/_pagination.scss
+++ b/assets/styles/parts/_pagination.scss
@@ -49,7 +49,7 @@
 
 .pagination-active span {
   background: $grey-600;
-  color: #fff;
+  color: $white;
   font-weight: bold;
   cursor: default;
 }
