--- a/assets/styles/pages/_single.scss
+++ b/assets/styles/pages/_single.scss
@@ -36,6 +36,10 @@
     &:hover {
       border-color: $link-color;
     }
+    &:focus {
+      outline: thin dotted;
+      outline-offset: -2px;
+    }
   }
 
   > h2 {
