--- a/assets/styles/base/_global.scss
+++ b/assets/styles/base/_global.scss
@@ -50,13 +50,8 @@ a {
   &:focus {
     color: $link-hover-color;
   }
-
   &:focus {
-    // Default
-    outline: thin dotted;
-    // WebKit
-    outline: 5px auto -webkit-focus-ring-color;
-    outline-offset: -2px;
+    outline: 0;
   }
 }
 
