fix: 直下セレクタ

--- a/assets/styles/pages/_single.scss
+++ b/assets/styles/pages/_single.scss
@@ -58,10 +58,10 @@
   > ul,
   > ol,
   > dl,
-  > figure,
   > table,
-  > img,
-  > div {
+  figure,
+  img,
+  div {
     margin-bottom: 2rem;
   }
 
@@ -152,7 +152,7 @@
     }
   }
 
-  > img {
+  img {
     display: block;
     max-width: 100%;
     height: auto;
