--- a/assets/styles/parts/_drawer.scss
+++ b/assets/styles/parts/_drawer.scss
@@ -50,13 +50,13 @@
   top: 0;
   bottom: 0;
   left: 0;
-  width: 240px;
+  width: 256px;
   height: 100%;
   max-height: 100%;
   transform: translate(-100%, 0) translate3d(-100%, 0, 0);
   transition: transform .2s ease, opacity .2s ease;
-  border-right: 1px solid rgba(0, 0, 0, .14);
   background: $white;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, .16), 0 3px 10px rgba(0, 0, 0, .23);
   opacity: 0;
   z-index: 2;
 }
