--- a/assets/styles/pages/_single.scss
+++ b/assets/styles/pages/_single.scss
@@ -4,7 +4,7 @@
   border: 1px solid rgba(0, 0, 0, .09);
   border-radius: ($spacer * .125);
   background: $white;
-  color: $grey-700;
+  color: $grey-800;
   box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
 
   > header {
@@ -40,6 +40,22 @@
       outline: thin dotted;
       outline-offset: -2px;
     }
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    &:hover .anchor {
+      visibility: visible;
+    }
+  }
+
+  .anchor {
+    margin-left: -1rem;
+    padding-right: 4px;
+    border: 0;
+    color: $grey-400;
+    font-family: $font-family-monospace;
+    visibility: hidden;
+    user-select: none;
   }
 
   > h2 {
