--- a/assets/styles/pages/_single.scss
+++ b/assets/styles/pages/_single.scss
@@ -43,8 +43,13 @@
   }
 
   h1, h2, h3, h4, h5, h6 {
-    &:hover .anchor {
-      visibility: visible;
+    &:first-child {
+      margin-top: 0;
+    }
+    &:hover {
+      .anchor {
+        visibility: visible;
+      }
     }
   }
 
@@ -54,6 +59,7 @@
     border: 0;
     color: $grey-400;
     font-family: $font-family-monospace;
+    font-weight: normal;
     visibility: hidden;
     user-select: none;
   }
