--- a/assets/styles/base/_type.scss
+++ b/assets/styles/base/_type.scss
@@ -1,46 +1,38 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  line-height: $perfect-fourth;
-}
-
-h1,
-h2,
-h3 {
-  margin-top: 1.5rem;
-  margin-bottom: 1rem;
-}
-h4,
-h5,
-h6 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 h1 {
-  margin-top: 0;
+  margin-top: 2rem;
+  margin-bottom: 4rem;
   color: $font-color-h1;
   font-size: $font-size-h1;
 }
+
 h2 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   color: $font-color-h2;
   font-size: $font-size-h2;
 }
+
 h3 {
+  margin-top: 2rem;
+  margin-bottom: 0;
   color: $font-color-h3;
   font-size: $font-size-h3;
 }
+
 h4 {
+  margin-top: 2rem;
+  margin-bottom: 0;
   color: $font-color-h4;
   font-size: $font-size-h4;
 }
+
 h5 {
+  margin-top: 2rem;
+  margin-bottom: 0;
   color: $font-color-h5;
   font-size: $font-size-h5;
 }
+
 h6 {
   color: $font-color-h6;
   font-size: $font-size-h6;
@@ -56,6 +48,10 @@ pre,
 code {
   font-family: $font-family-monospace;
   font-feature-settings: "zero" 1;
+}
+
+blockquote {
+  width: 100%;
 }
 
 table {
@@ -100,6 +96,8 @@ ol {
 
 ol ol,
 ul ol {
+  margin-top: 0;
+  margin-bottom: 0;
   list-style-type: lower-roman;
 }
 
@@ -107,6 +105,8 @@ ul ul ol,
 ul ol ol,
 ol ul ol,
 ol ol ol {
+  margin-top: 0;
+  margin-bottom: 0;
   list-style-type: lower-alpha;
 }
 
