--- a/assets/styles/pages/_single.scss
+++ b/assets/styles/pages/_single.scss
@@ -17,9 +17,11 @@
     }
   }
 
-  h1 {
-    margin: ($spacer / 2) auto;
+  .entry-title {
+    margin: .5rem auto;
+    font-size: $font-size-h2;
     font-weight: normal;
+    line-height: 3rem;
     word-wrap: break-word;
   }
 
@@ -55,18 +57,21 @@
 
   .anchor {
     margin-left: -1rem;
-    padding-right: 4px;
+    padding-right: .25rem;
+    float: left;
     border: 0;
     color: $grey-400;
     font-family: $font-family-monospace;
+    font-size: 1.5rem;
     font-weight: normal;
+    vertical-align: middle;
     visibility: hidden;
     user-select: none;
   }
 
   > h2 {
     margin: 4rem 0 1rem;
-    padding-bottom: .75rem;
+    padding-bottom: 1rem;
     border-bottom: 2px solid $grey-200;
   }
 
