--- a/assets/styles/parts/_mokuji.scss
+++ b/assets/styles/parts/_mokuji.scss
@@ -7,6 +7,7 @@
   display: table-cell;
   width: 30%;
   padding-right: 3rem;
+  font-size: $font-size-h3;
   font-weight: normal;
   white-space: nowrap;
 
