--- a/assets/styles/base/_type.scss
+++ b/assets/styles/base/_type.scss
@@ -1,27 +1,36 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
+}
+
 h1 {
   margin-top: 2rem;
-  margin-bottom: 4rem;
+  margin-bottom: 1.5rem;
   color: $font-color-h1;
   font-size: $font-size-h1;
 }
 
 h2 {
   margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   color: $font-color-h2;
   font-size: $font-size-h2;
 }
 
 h3 {
   margin-top: 2rem;
-  margin-bottom: 0;
+  margin-bottom: .5rem;
   color: $font-color-h3;
   font-size: $font-size-h3;
 }
 
 h4 {
-  margin-top: 2rem;
-  margin-bottom: 0;
+  margin-top: 1rem;
+  margin-bottom: .5rem;
   color: $font-color-h4;
   font-size: $font-size-h4;
 }
@@ -34,6 +43,7 @@ h5 {
 }
 
 h6 {
+  margin-bottom: 0;
   color: $font-color-h6;
   font-size: $font-size-h6;
 }
@@ -92,6 +102,7 @@ ul,
 ol {
   margin-top: 0;
   margin-bottom: 0;
+  padding-left: 2rem;
 }
 
 ol ol,
