--- a/assets/styles/pages/_single.scss
+++ b/assets/styles/pages/_single.scss
@@ -18,7 +18,7 @@
   }
 
   .entry-title {
-    margin: .5rem auto;
+    margin: 0 0 .5rem;
     font-size: $font-size-h2;
     font-weight: normal;
     line-height: 3rem;
@@ -45,9 +45,6 @@
   }
 
   h1, h2, h3, h4, h5, h6 {
-    &:first-child {
-      margin-top: 0;
-    }
     &:hover {
       .anchor {
         visibility: visible;
@@ -57,8 +54,6 @@
 
   .anchor {
     margin-left: -1rem;
-    padding-right: .25rem;
-    float: left;
     border: 0;
     color: $grey-400;
     font-family: $font-family-monospace;
@@ -67,16 +62,6 @@
     vertical-align: middle;
     visibility: hidden;
     user-select: none;
-  }
-
-  > h2 {
-    margin: 4rem 0 1rem;
-    padding-bottom: 1rem;
-    border-bottom: 2px solid $grey-200;
-  }
-
-  > h3 {
-    margin: 2rem 0 .5rem;
   }
 
   > p,
