fix: 軽微な微調整

--- a/assets/styles/config/_variables.scss
+++ b/assets/styles/config/_variables.scss
@@ -94,4 +94,5 @@ $animation-curve-fast-out-slow-in: cubic-bezier(.4, 0, .2, 1);
 // Layout
 // -------------------------
 
-$header-nav-height:          4rem;
+$header-nav-height:        4rem;
+$article-padding-side:     1.5rem;
