--- a/assets/styles/parts/_mokuji.scss
+++ b/assets/styles/parts/_mokuji.scss
@@ -22,7 +22,7 @@
 .mokuji-content {
   display: table-cell;
   padding-left: 1rem;
-  border-left: solid 3px $blue-100;
+  border-left: 2px solid $blue-100;
 
   ol {
     margin-bottom: 0;
