--- a/assets/styles/parts/_entry-similar.scss
+++ b/assets/styles/parts/_entry-similar.scss
@@ -5,10 +5,14 @@
     display: block;
     height: 100%;
     padding: 1rem 1.5rem;
+    transition: box-shadow .3s ease;
     border: 1px solid rgba(0, 0, 0, .09);
     border-radius: ($spacer * .125);
     background: $white;
     box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
+    &:hover {
+      box-shadow: 0 1px 4px rgba(0, 0, 0, .16);
+    }
   }
 
   .columns {
