fix: スタイルの微調整

--- a/assets/styles/layouts/_sidebar.scss
+++ b/assets/styles/layouts/_sidebar.scss
@@ -15,7 +15,7 @@
     color: $grey-600;
     font-size: $font-size-sm;
     &:hover {
-      background: $grey-300;
+      background: $blue-50;
     }
   }
 }
