--- a/assets/styles/base/_type.scss
+++ b/assets/styles/base/_type.scss
@@ -28,22 +28,24 @@ h3 {
   font-size: $font-size-h3;
 }
 
-h4 {
+h4,
+h5,
+h6 {
   margin-top: 1rem;
   margin-bottom: .5rem;
+}
+
+h4 {
   color: $font-color-h4;
   font-size: $font-size-h4;
 }
 
 h5 {
-  margin-top: 2rem;
-  margin-bottom: 0;
   color: $font-color-h5;
   font-size: $font-size-h5;
 }
 
 h6 {
-  margin-bottom: 0;
   color: $font-color-h6;
   font-size: $font-size-h6;
 }
