--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -1,13 +1,11 @@
 $entry-thumbnail-size: 5rem;  // 80px;
 
 .page-header {
-  margin: 0;
-  padding: .5rem 0 1rem;
-  font-size: $font-size-h3;
-  font-weight: normal;
+  margin: 0 0 1rem 0;
+  font-size: $font-size-lg;
 
   @include mobile {
-    margin-left: 1rem;
+    padding-left: 1rem;
   }
 }
 
@@ -26,46 +24,49 @@ $entry-thumbnail-size: 5rem;  // 80px;
   }
 
   .entry-image,
-  .entry-home-body {
+  .entry-body {
     display: table-cell;
     vertical-align: top;
   }
 
-  &-container {
-    transition: background .3s $animation-curve-fast-out-slow-in;
-    border-bottom: 1px solid $grey-200;
-    user-select: none;
-
-    &:hover {
-      background: $grey-50;
+  .entry {
+    &-container {
       cursor: pointer;
-      .image-sheet {
-        transform: scale(1.15);
+      user-select: none;
+
+      & + .entry-container {
+        border-top: 1px solid $grey-200;
+      }
+
+      &:hover {
+        .entry-title {
+          color: $blue-300;
+        }
+        .image-sheet {
+          transform: scale(1.15);
+        }
       }
     }
 
-    &:last-child {
-      border-bottom: 0;
+    &-body {
+      width: 100%;
+      height: $entry-thumbnail-size + 1rem;
     }
-  }
 
-  &-body {
-    width: 100%;
-    height: ($entry-thumbnail-size * 1.2);
-  }
+    &-title {
+      margin: 0 0 .5rem 0;
+      transition: color .3s $animation-curve-fast-out-slow-in;
+      font-size: $font-size-h4;
+      line-height: 1.75rem;
+    }
 
-  &-title {
-    margin: 0 0 .5rem 0;
-    font-size: $font-size-h3;
-    font-weight: normal;
-    word-wrap: break-word;
-  }
-
-  &-summary {
-    margin-bottom: .5rem;
-    color: $grey-600;
-    font-size: $font-size-sm;
-    text-align: justify;
+    &-summary {
+      margin-bottom: .5rem;
+      color: $grey-600;
+      font-size: $font-size-sm;
+      text-align: justify;
+      word-break: break-all;
+    }
   }
 
   .entry-meta {
@@ -76,7 +77,8 @@ $entry-thumbnail-size: 5rem;  // 80px;
 // image
 .image-container {
   @include size($entry-thumbnail-size);
-  border: 1px solid $grey-200;
+  // border: 1px solid $grey-200;
+  box-shadow: 0 0 0 1px $grey-200;
   border-radius: ($spacer * .125);
   overflow: hidden;
 
