--- a/assets/styles/parts/_breadcrumb.scss
+++ b/assets/styles/parts/_breadcrumb.scss
@@ -15,17 +15,38 @@
     font-size: $font-size-sm;
     list-style: none;
     word-wrap: break-word;
-    @include clearfix;
   }
 
   li {
-    float: left;
-    &:not(:last-child) {
-     margin-right: .5rem;
+    display: inline-block;
+
+    &:first-child a::before {
+      font-family: 'Material Icons';
+      line-height: 1;
+      content: 'home';
+      vertical-align: middle;
+    }
+
+    & + li {
+      margin-left: .25rem;
+      &::before {
+        font-family: 'Material Icons';
+        line-height: 1;
+        content: 'keyboard_arrow_right';
+        vertical-align: middle;
+      }
     }
   }
-}
 
-.breadcrumb-active {
-  color: $grey-600;
+  .breadcrumb-active {
+    color: $grey-600;
+
+    a::before {
+      font-family: 'Material Icons';
+      line-height: 1;
+      content: 'location_on';
+      vertical-align: middle;
+    }
+  }
+
 }
