--- a/assets/styles/parts/_breadcrumb.scss
+++ b/assets/styles/parts/_breadcrumb.scss
@@ -14,13 +14,12 @@
     color: $grey-400;
     font-size: $font-size-sm;
     list-style: none;
-    word-wrap: break-word;
   }
 
   li {
     display: inline-block;
 
-    &:first-child a::before {
+    &:first-child::before {
       font-family: 'Material Icons';
       line-height: 1;
       content: 'home';
@@ -41,10 +40,10 @@
   .breadcrumb-active {
     color: $grey-600;
 
-    a::before {
+    &::before {
       font-family: 'Material Icons';
       line-height: 1;
-      content: 'location_on';
+      content: 'keyboard_arrow_right' + 'location_on';
       vertical-align: middle;
     }
   }
