--- a/assets/styles/parts/_entry-meta.scss
+++ b/assets/styles/parts/_entry-meta.scss
@@ -81,9 +81,10 @@
 
   li {
     display: inline-block;
+    margin-right: .5rem;
     margin-bottom: .5rem;
-    + li {
-      margin-left: .5rem;
+    &:last-child {
+      margin-right: 0;
     }
   }
 
