add: cardクラスを追加

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -31,6 +31,7 @@ $output-bourbon-deprecation-warnings: false;
 @import "parts/amazon";
 @import "parts/pagination";
 @import "parts/breadcrumb";
+@import "parts/card";
 @import "parts/drawer";
 @import "parts/mokuji";
 @import "parts/loader";
