--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -10,10 +10,6 @@ $entry-thumbnail-size: 5rem;  // 80px;
 }
 
 .entry-home {
-  border: 1px solid rgba(0, 0, 0, .09);
-  border-radius: ($spacer * .125);
-  background: $white;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
   overflow: hidden;
 
   a {
@@ -77,9 +73,8 @@ $entry-thumbnail-size: 5rem;  // 80px;
 // image
 .image-container {
   @include size($entry-thumbnail-size);
-  // border: 1px solid $grey-200;
+  border-radius: .125rem;
   box-shadow: 0 0 0 1px $grey-200;
-  border-radius: ($spacer * .125);
   overflow: hidden;
 
   .material-icons {
