--- a/assets/styles/parts/_entry-meta.scss
+++ b/assets/styles/parts/_entry-meta.scss
@@ -25,11 +25,9 @@
     // }
 
     & + li::before {
+      @extend .material-icons;
       margin: 0 .25rem;
-      font-family: 'Material Icons';
-      line-height: 1;
       content: 'keyboard_arrow_right';
-      vertical-align: middle;
     }
 
   }
@@ -46,11 +44,9 @@
 .entry-time {
   li {
     &:first-child::before {
+      @extend .material-icons;
       margin-right: .25rem;
-      font-family: 'Material Icons';
-      line-height: 1;
       content: 'update';
-      vertical-align: middle;
     }
   }
 }
@@ -59,11 +55,9 @@
 .entry-category {
   li {
     &:first-child::before {
+      @extend .material-icons;
       margin-right: .25rem;
-      font-family: 'Material Icons';
-      line-height: 1;
       content: 'folder';
-      vertical-align: middle;
     }
   }
 }
