--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -34,7 +34,7 @@ $output-bourbon-deprecation-warnings: false;
 @import "parts/card";
 @import "parts/drawer";
 @import "parts/mokuji";
-@import "parts/loader";
+// @import "parts/loader";
 @import "parts/sandbox";
 @import "parts/entry-meta";
 @import "parts/entry-share";
