--- a/assets/styles/base/_global.scss
+++ b/assets/styles/base/_global.scss
@@ -29,6 +29,9 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   margin: 0;
   background: $grey-100;
   color: $grey-700;
