--- a/assets/styles/layouts/_main.scss
+++ b/assets/styles/layouts/_main.scss
@@ -1,7 +1,7 @@
 // nav min-height from bulma = 3.5rem
 // for header's position:fixed
 .main-container {
-  min-height: calc(100vh - #{$header-nav-height});  // for footer
+  flex: 1;
   margin: 0 1rem;
   padding-top: $header-nav-height + 1rem;  // for header
 
