--- a/assets/styles/parts/_entry-similar.scss
+++ b/assets/styles/parts/_entry-similar.scss
@@ -1,41 +1,26 @@
 .entry-related {
+  display: flex;
   margin-bottom: 1rem;
+  overflow-x: scroll;
 
   a {
     display: block;
-    height: 100%;
+    width: 360px;
+    height: 222px;
     padding: 1rem 1.5rem;
     transition: box-shadow .3s ease;
+    overflow: hidden;
     &:hover {
       box-shadow: 0 1px 4px rgba(0, 0, 0, .16);
     }
   }
 
-  .columns {
-    margin-top: 0;
-    margin-right: 0;
-    margin-left: 0;
-  }
 }
 
 .related-container {
-  overflow: hidden;
-
-  &.column {
-    padding-top: 0;
-
-    &:first-child {
-      padding-left: 0;
-    }
-    &:last-child {
-      padding-right: 0;
-    }
-
-    @include mobile {
-      padding: 0 0 .5rem 0;
-    }
+  & + & {
+    margin-left: .5rem;
   }
-
 }
 
 .related-title {
@@ -53,5 +38,6 @@
 .related-description {
   color: $grey-500;
   font-size: $font-size-sm;
+  overflow: hidden;
   word-break: break-all;
 }
