add: インターフェイスプレビュー

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,7 +8,7 @@ $output-bourbon-deprecation-warnings: false;
 
 // grid framework: bulma
 @import "vendor/bulma";
-@import "vendor/_placeholder";
+@import "vendor/placeholder";
 @import "vendor/bootstrap-migration";
 
 // styles
