--- a/assets/styles/parts/_amazon.scss
+++ b/assets/styles/parts/_amazon.scss
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  text-align: center;
   overflow: hidden;
   z-index: 0;
 
