fix: 表示条件をpost/pageに限定

--- a/assets/styles/base/_global.scss
+++ b/assets/styles/base/_global.scss
@@ -37,7 +37,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   margin: 0;
-  background: $grey-100;
+  background: $white;
   color: $grey-700;
   font-weight: $font-weight-base;
 
