--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -1,11 +1,18 @@
 .footer-navigation {
-  margin-top: 1rem;
   padding: 2rem 1rem;
-  background: $grey-800;
-  color: $grey-400;
+  background: $grey-300;
+  color: $grey-600;
+
+  .container {
+    display: flex;
+    align-items: center;
+    @include mobile {
+      flex-direction: column;
+    }
+  }
 
   a {
-    color: $grey-200;
+    color: $grey-500;
     &:hover {
       text-decoration: underline;
     }
@@ -20,15 +27,23 @@
     display: inline-block;
 
     &:not(:last-child) {
-      margin-right: .5rem;
+      margin-right: 1rem;
     }
   }
 }
 
+.footer-menu ,
+.footer-copytight {
+  display: flex;
+  flex-basis: 0;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
 .footer-menu {
-  text-align: left;
+  justify-content: start;
 }
 
 .footer-copytight {
-  text-align: right;
+  justify-content: end;
 }
