fix: Singleレイアウトの修正

--- a/assets/styles/pages/_single.scss
+++ b/assets/styles/pages/_single.scss
@@ -1,6 +1,9 @@
 .entry {
   margin-bottom: 1rem;
-  padding: 1rem $article-padding-side;
+
+  @include mobile {
+    padding: 0 1rem;
+  }
 
   > header {
     margin-bottom: 1rem;
