--- a/assets/styles/parts/_entry-similar.scss
+++ b/assets/styles/parts/_entry-similar.scss
@@ -10,14 +10,12 @@
     padding: 1rem 1.5rem;
     transition: box-shadow .3s ease;
     overflow: hidden;
-    &:hover {
-      box-shadow: 0 1px 4px rgba(0, 0, 0, .16);
-    }
   }
 
 }
 
 .related-container {
+  border: 1px solid $grey-200;
   & + & {
     margin-left: .5rem;
   }
