--- a/assets/styles/parts/_pagination.scss
+++ b/assets/styles/parts/_pagination.scss
@@ -1,27 +1,29 @@
-// pagination
-.pagination-container {
-  display: flex;
-  justify-content: center;
-  margin: ($spacer * 2) 0;
-  user-select: none;
-}
-
 .pagination {
-  padding-left: 0;
-  font-size: 0;
+  margin-bottom: 1rem;
+  user-select: none;
+
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0;
+  }
 
   li {
-    display: inline;
-    font-size: 1rem;
-    @media screen and (max-width: $screen-xs) {
-      &:not(.pagination-frist):not(.pagination-next):not(.pagination-previous):not(.pagination-last):not(.pagination-active) {
+    display: flex;
+
+    & + li {
+      margin-left: .5rem;
+    }
+
+    @include mobile {
+      &:not(.pagination-first):not(.pagination-next):not(.pagination-previous):not(.pagination-last):not(.pagination-active) {
         display: none;
       }
     }
   }
 
   a {
-    transition: background .3s $animation-curve-fast-out-slow-in;
     &:hover {
       background: $grey-300;
     }
@@ -29,30 +31,22 @@
 
   a,
   span {
-    margin: 0 ($spacer / 4);
-    padding: .75rem;
+    min-width: 3rem;
+    min-height: 3rem;
     border-radius: 2px;
     color: $grey-600;
-    font-size: $font-size-sm;
+    line-height: 3rem;
+    text-align: center;
+
     &:hover,
     &:focus {
       outline: 0;
     }
   }
-
-}
-
-.pagination-previous a {
-  margin-right: $spacer;
-}
-
-.pagination-next a {
-  margin-left: $spacer;
 }
 
 .pagination-active span {
   background: $grey-600;
   color: $white;
-  font-weight: bold;
   cursor: default;
 }
